# sapsan_test

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py  parser.ipynb
src/api/: app.py  lifespan.py  routers.py
src/api/routers/: files.py  health.py  questions.py
src/core/: config.py  embedder.py  llm_factory.py  logger.py  pipeline.py  prompt.py  redis_client.py  reranker.py  retriever.py  schemas.py  vector_store.py
src/core/ingestion/: docx_parser.py  ingestion.py
