[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mikhail" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "fastapi>=0.128.0",
    "flake8",
    "isort",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "notebook>=7.5.3",
    "pip",
    "pydantic-settings>=2.12.0",
    "python-docx>=1.2.0",
    "python-dotenv",
    "python-multipart>=0.0.22",
    "rank-bm25>=0.2.2",
    "redis>=7.1.0",
    "torch>=2.10.0",
    "transformers",
    "uvicorn>=0.40.0",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
force_sort_within_sections = true


